# payroll

./: .env  .gitignore  .pre-commit-config.yaml  README.md  TESTING.md  auto_push_pr.ps1  check_logic_usage.py  cleanup_repo.py  cleanup_ui_final.py  commit_msg_db_standard.txt  ersSZERTYUIOPMLMMDesktopAPPapp  fix_db_connections.py  merge_safe.ps1  merge_unrelated.ps1  mypy.ini  push_and_pr.ps1  pyproject.toml  reorganize_repo.py  requirements-dev.txt  ruff-remaining.txt  ruff-report-before.json  ruff-report-before.txt  summarize_ruff.py  summarize_top20.py
.cursor/: tasks.json
.github/: copilot-instructions.md
_dbtest/: caseA.err.txt
app/: .cursorignore  .env.example  .env.pre_test  .env.template  .gitignore  COMPARE_EXCEL.bat  Creer_Raccourci_Bureau.ps1  FICHIERS_MODIFIES.md  LANCER_APP.bat  LANCEURS_DISPONIBLES.md  LAUNCH_PAYROLL.bat  LAUNCH_VISIBLE.bat  LISTE_COLONNES_EXCEL_REQUISES.txt  OU_SONT_LES_FICHIERS.txt  RAPPORT_EMPLOYES.md  RAPPORT_TECHNIQUE_ERREURS_IMPORT.md  RAPPORT_TECHNIQUE_SUPPRESSION_PERIODE.md  README.md  REFACTOR_CONNEXIONS_RAPPORT.md  REFACTOR_REPORT.txt  RESUME_MODIFICATIONS_SUPPRESSION.md  RUN_DB_TEST.bat  Run-DbConnTests.ps1  STANDARDISATION_RESUME.md  TEST_FINAL.bat  UNIFY_PASSWORDS.bat  __init__.py  accorder_droits_manuel.sql  add_business_columns.py  add_columns_20251110_004822.sql  add_columns_simple.py  alembic.ini  analyser_periode_paie.py  auto-commit-push.ps1  check_total.py  connect_check.py  corriger_erreur_does_not_exist.py  corriger_montants_en_numeric.sql  corriger_montants_manuel.sql  corriger_types_montants.sql  (+20 more)
(+460 files in other folders)
